--- a/Manual/data/style.css
+++ b/Manual/data/style.css
@@ -59,6 +59,11 @@ body{
 	margin-right:1em;
 }
 
+hr{
+	margin-top:0.5em;
+	margin-bottom:0.5em;
+}
+
 ul {
 	list-style: disc;
 	margin-left:2em;
@@ -79,6 +84,14 @@ h2{
 
 h3{
 	font-size:1.25em;
+}
+
+h4{
+	font-size:1.125em;
+}
+
+h5{
+	font-size:1.075em;
 }
 
 a:hover{
